--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  poster="MY_VIDEO_POSTER.jpg"
 		  data-setup="{}"
 		>
-		  <source src="http://130.204.96.2:1935/TestGoProStream/Test/playlist.m3u8" type="application/x-mpegURL" />
+		  <source src="https://130.204.96.2:1935/TestGoProStream/Test/playlist.m3u8" type="application/x-mpegURL" />
 		  <p class="vjs-no-js">
 			To view this video please enable JavaScript, and consider upgrading to a
 			web browser that
