--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		  height="720"
 		  data-setup="{}"
 		>
-		  <source src="https://619d2b70b8897.streamlock.net/TestGoProStream/Test/playlist.m3u8" type="application/x-mpegURL" />
+		  <source src="https://619d2b70b8897.streamlock.net:443/TestGoProStream/Test/playlist.m3u8" type="application/x-mpegURL" />
 		  <p class="vjs-no-js">
 			<a href="https://videojs.com/html5-video-support/" target="_blank"
 			>
